CCT-2262 to main: StreamId: Redeisgn of CourtCentreAggregate for generation of court register  (#198)
* reset with main branch; updated pom versions

* Dev/cct 2262 (#78)

* [CCT-2262] updated streamIds for courtCentre and prisonCourtCentre as per new design

* additional test coverage

* fix IT tests

* updated CourtRegisterHandler so that Aggregate enriched only when needed

* refactor

* Update pom.xml

* Update pom.xml

* New 17.0.21-PET-CR-SNAPSHOT

* Dev/cct 2262 serial version Id update on CourtCentreAggregate (#88)

* [CCT-2262] updated serialVersionUID of the aggregate

* set registerDate without converion as ZonedDateTime

* [DD-35646] fix: ensure courtCentreId and registerDate saved on aggregate

* using latest version of referencedata

* New 17.0.30-PET-CR-SNAPSHOT

* [CCT-2262] StreamId: Redeisgn of CourtCentreAggregate for generation of court register

---------

Co-authored-by: Narender Pal <narender.pal@hmcts.net>
Co-authored-by: devops-team <devops-team@hmcts.net>