@@ -1,12 +1,12 @@
 package uk.gov.moj.cpp.progression.aggregate;
 
+import static java.util.Collections.singletonList;
 import static java.util.UUID.randomUUID;
 import static java.util.stream.Collectors.toList;
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
 
-import uk.gov.justice.core.courts.CourtRegisterRecorded;
 import uk.gov.justice.core.courts.PrisonCourtRegisterGenerated;
 import uk.gov.justice.core.courts.PrisonCourtRegisterRecorded;
 import uk.gov.justice.core.courts.PrisonCourtRegisterWithoutRecipientsRecorded;
@@ -20,16 +20,15 @@ import uk.gov.justice.core.courts.prisonCourtRegisterDocument.PrisonCourtRegiste
 import uk.gov.justice.core.courts.prisonCourtRegisterDocument.RecordPrisonCourtRegisterDocumentGenerated;
 import uk.gov.justice.progression.courts.CourtRegisterGenerated;
 import uk.gov.justice.progression.courts.CourtRegisterNotificationIgnored;
-import uk.gov.justice.progression.courts.CourtRegisterNotified;
+import uk.gov.justice.progression.courts.CourtRegisterNotifiedV2;
 import uk.gov.justice.progression.courts.NotifyCourtRegister;
 
+import java.time.ZonedDateTime;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
 import com.google.common.collect.Lists;
-import org.hamcrest.CoreMatchers;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -41,35 +40,7 @@ public class CourtCentreAggregateTest {
         aggregate = new CourtCentreAggregate();
     }
 
-    @Test
-    public void shouldRecordCourtRegisterDocumentRequest() {
-        final UUID courtCentreId = randomUUID();
-        final CourtRegisterDocumentRequest courtRegisterDocumentRequest = CourtRegisterDocumentRequest.
-                courtRegisterDocumentRequest().
-                withCourtCentreId(courtCentreId).
-                build();
-
-        final List<Object> eventStream = aggregate.createCourtRegister(courtCentreId, courtRegisterDocumentRequest).collect(toList());
-
-        assertThat(eventStream.size(), is(1));
-        final Object object = eventStream.get(0);
-        assertThat(object.getClass(), is(CoreMatchers.<Class<?>>equalTo(CourtRegisterRecorded.class)));
-    }
-
-    @Test
-    public void shouldGenerateCourtRegister() {
-        final UUID courtCentreId = randomUUID();
-
-        final CourtRegisterDocumentRequest courtRegisterDocumentRequest = CourtRegisterDocumentRequest.
-                courtRegisterDocumentRequest().
-                withCourtCentreId(courtCentreId).
-                build();
-
-        final List<Object> eventStream = aggregate.generateDocument(Collections.singletonList(courtRegisterDocumentRequest), false).collect(toList());
-        assertThat(eventStream.size(), is(1));
-        final Object object = eventStream.get(0);
-        assertThat(object.getClass(), is(equalTo(CourtRegisterGenerated.class)));
-    }
+    private static final ZonedDateTime REGISTER_DATE = ZonedDateTime.parse("2024-10-24T22:23:12.414Z");
 
     @Test
     public void shouldGeneratePrisonCourtRegister() {
@@ -84,7 +55,7 @@ public class CourtCentreAggregateTest {
 
         final List<Object> eventStream = aggregate.createPrisonCourtRegister(courtCentreId, prisonCourtRegisterDocumentRequest, "Applicant").collect(toList());
         assertThat(eventStream.size(), is(1));
-        final PrisonCourtRegisterRecorded prisonCourtRegisterRecorded = (PrisonCourtRegisterRecorded)eventStream.get(0);
+        final PrisonCourtRegisterRecorded prisonCourtRegisterRecorded = (PrisonCourtRegisterRecorded) eventStream.get(0);
         assertThat(prisonCourtRegisterRecorded.getClass(), is(equalTo(PrisonCourtRegisterRecorded.class)));
         assertThat(prisonCourtRegisterRecorded.getCourtCentreId(), is(courtCentreId));
         assertThat(prisonCourtRegisterRecorded.getPrisonCourtRegister(), equalTo(prisonCourtRegisterDocumentRequest));
@@ -102,7 +73,7 @@ public class CourtCentreAggregateTest {
 
         final List<Object> eventStream = aggregate.createPrisonCourtRegister(courtCentreId, prisonCourtRegisterDocumentRequest, "Applicant").collect(toList());
         assertThat(eventStream.size(), is(1));
-        final PrisonCourtRegisterWithoutRecipientsRecorded prisonCourtRegisterWithoutRecipientsRecorded = (PrisonCourtRegisterWithoutRecipientsRecorded)eventStream.get(0);
+        final PrisonCourtRegisterWithoutRecipientsRecorded prisonCourtRegisterWithoutRecipientsRecorded = (PrisonCourtRegisterWithoutRecipientsRecorded) eventStream.get(0);
         assertThat(prisonCourtRegisterWithoutRecipientsRecorded.getClass(), is(equalTo(PrisonCourtRegisterWithoutRecipientsRecorded.class)));
         assertThat(prisonCourtRegisterWithoutRecipientsRecorded.getCourtCentreId(), is(courtCentreId));
         assertThat(prisonCourtRegisterWithoutRecipientsRecorded.getPrisonCourtRegister(), equalTo(prisonCourtRegisterDocumentRequest));
@@ -126,7 +97,7 @@ public class CourtCentreAggregateTest {
 
         final List<Object> eventStream = aggregate.recordPrisonCourtRegisterGenerated(courtCentreId, prisonCourtRegisterDocumentRequest).collect(toList());
         assertThat(eventStream.size(), is(1));
-        final PrisonCourtRegisterGenerated prisonCourtRegisterRecorded = (PrisonCourtRegisterGenerated)eventStream.get(0);
+        final PrisonCourtRegisterGenerated prisonCourtRegisterRecorded = (PrisonCourtRegisterGenerated) eventStream.get(0);
         assertThat(prisonCourtRegisterRecorded.getClass(), is(equalTo(PrisonCourtRegisterGenerated.class)));
         assertThat(prisonCourtRegisterRecorded.getCourtCentreId(), is(courtCentreId));
         assertThat(prisonCourtRegisterRecorded.getRecipients(), equalTo(recipients));
@@ -138,32 +109,44 @@ public class CourtCentreAggregateTest {
     @Test
     public void shouldNotifyCourtCentre() {
         final UUID courtCentreId = randomUUID();
+        final UUID courtRegisterId = randomUUID();
         final UUID systemDocGeneratorId = randomUUID();
+
         final CourtRegisterRecipient recipient = CourtRegisterRecipient.courtRegisterRecipient().withRecipientName("John").build();
 
+        //given CourtRegisterGenerated
+        aggregate.apply(CourtRegisterGenerated.courtRegisterGenerated()
+                .withCourtRegisterDocumentRequests(singletonList(CourtRegisterDocumentRequest.courtRegisterDocumentRequest()
+                        .withRecipients(singletonList(recipient))
+                        .withCourtCentreId(courtCentreId)
+                        .withRegisterDate(REGISTER_DATE)
+                        .build()))
+                .build());
+
         final NotifyCourtRegister notifyCourtRegister = NotifyCourtRegister.notifyCourtRegister()
-                .withCourtCentreId(courtCentreId)
+                .withCourtRegisterId(courtRegisterId)
                 .withSystemDocGeneratorId(systemDocGeneratorId)
                 .build();
 
-        aggregate.setCourtRegisterRecipients(Collections.singletonList(recipient));
-        final List<Object> eventStream = aggregate.notifyCourt(notifyCourtRegister).collect(toList());
+        final List<Object> eventStream = aggregate.notifyCourt(notifyCourtRegister).toList();
         assertThat(eventStream.size(), is(1));
-        final Object object = eventStream.get(0);
-        assertThat(object.getClass(), is(equalTo(CourtRegisterNotified.class)));
+        final CourtRegisterNotifiedV2 object = (CourtRegisterNotifiedV2) eventStream.get(0);
+        assertThat(object.getCourtCentreId(), is(equalTo(courtCentreId)));
+        assertThat(object.getRegisterDate(), is(equalTo(REGISTER_DATE.toLocalDate())));
+        assertThat(object.getSystemDocGeneratorId(), is(equalTo(systemDocGeneratorId)));
     }
 
     @Test
     public void shouldNotifyCourtCentreEmptyRecipient() {
-        final UUID courtCentreId = randomUUID();
+        final UUID courtRegisterId = randomUUID();
         final UUID systemDocGeneratorId = randomUUID();
 
         final NotifyCourtRegister notifyCourtRegister = NotifyCourtRegister.notifyCourtRegister()
-                .withCourtCentreId(courtCentreId)
+                .withCourtRegisterId(courtRegisterId)
                 .withSystemDocGeneratorId(systemDocGeneratorId)
                 .build();
 
-        final List<Object> eventStream = aggregate.notifyCourt(notifyCourtRegister).collect(toList());
+        final List<Object> eventStream = aggregate.notifyCourt(notifyCourtRegister).toList();
         assertThat(eventStream.size(), is(1));
         final Object object = eventStream.get(0);
         assertThat(object.getClass(), is(equalTo(CourtRegisterNotificationIgnored.class)));
